<resources>
    <string name="app_name">Chrono Training Tracker</string>
    <string name="athlete_name">Name</string>
    <string name="athlete_surname">Surname</string>
    <string name="athlete_sport">Favourite Sport</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="add_athlete">Add new athlete</string>
    <string name="athlete_activities">activities</string>
    <string name="activity_placeholder">Activity %1$s</string>
    <string name="athlete_name_error">Add a valid name</string>
    <string name="athlete_surname_error">Add a valid surname</string>
    <string name="athlete_activity_error">Select a valid sport from the list</string>

    <string name="athlete_list">Athletes list</string>
    <string name="none">None</string>
    <string name="athlete_current">Current athlete:</string>
    <string name="athlete">Athlete</string>
    <string name="added">added</string>
    <string name="export_all_activities">Export all</string>
    <string name="export_current_day_activities">Export current day</string>
    <string name="lap">Lap</string>
    <string name="lap_placeholder">Lap %1$s</string>
    <string name="duration_placeholder">Duration %1$s</string>
    <string name="activity_item_laps">Laps:</string>
    <string name="stop">Stop</string>
    <string name="no_athlete_records">No athletes profiles</string>
    <string name="no_activities_records">No activities for current day</string>
    <string name="activity_item_elapsed_time">Duration:</string>
    <string name="start_tracking_header">Start new tracking</string>
    <string name="start_tracking_speciality">Sport speciality</string>
    <string name="start_tracking_no_specialities">No specialities</string>
    <string name="select_activity">Select a sport</string>
    <string name="reset">Reset</string>
    <string name="chrono_tracker_title">Chronometer</string>
    <string name="notification_title">Chrono Training</string>
    <string name="notification_text_title">Training %1$s</string>
    <string name="notification_last_lap">Last lap</string>
    <string name="notification_action_goto">Go to tracker</string>
    <string name="chrono_state_pause">paused</string>
    <string name="chrono_state_tracking">in progress</string>
    <string name="chrono_state_reset">not started</string>
    <string name="chrono_state_touch_message">Touch here to continue your training</string>
    <string name="no_laps">No laps</string>
    <string name="done">Done</string>
    <string name="activity_summary">Activity summary</string>
    <string name="laps">Laps</string>
    <string name="sport">Sport</string>
    <string name="session_duration">Total Duration</string>
    <string name="session_added">Session added</string>
    <string name="session_error">Error adding session</string>
    <string name="file_saved_success">File saved successfully!</string>
</resources>
