<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_export_current"
        android:icon="@drawable/ic_file_download_solid"
        android:title="@string/export_current_day_activities"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_export_all"
        android:icon="@drawable/ic_file_download_solid"
        android:title="@string/export_all_activities"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_start_tracking"
        android:icon="@drawable/ic_stopwatch_solid"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_tracking_done"
        android:title="@string/done"
        android:visible="false"
        android:icon="@drawable/ic_check_solid"
        app:showAsAction="always"/>
</menu>